* Normalize selectors to reduce selector parsing complexity and improve compiled/dom caching memory footprints. [jddalton]

* Avoid setting the `elements` var in client_api() until necessary. [jddalton]

* Make the cache pause timeout equal to the `minCacheRest`. [jddalton]

* Optimize client_api() by avoiding unnecessary property lookups and assignments. [jddalton]

* Optimize compileSelector() by reducing property lookups in the while loop. [jddalton]

* Make `concatList` and `concatCall` perform better in IE. [jddalton]

* Make the `Optimize` object properties names more consistent with the rest of NWMatcher's coding style. [jddalton]

* Simplify feature tests by recycling the div test element and temp vars. [jddalton]

* Use native String#trim if available. [jddalton]

* Reorganize source. [jddalton]

*1.2.0* (November 2, 2009)