@@ -1,3 +1,5 @@
+* Ensure the match() method validates the selector. [jddalton]
+
 * Normalize selectors to reduce selector parsing complexity and improve compiled/dom caching memory footprints. [jddalton]
 
 * Avoid setting the `elements` var in client_api() until necessary. [jddalton]
